apps/base/cdc-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cdc-worker
  name: cdc-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cdc-worker
  template:
    metadata:
      labels:
        app: cdc-worker
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: backend-secrets
        - configMapRef:
            name: bookit-config
        image: bookit-cdc-worker:latest
        name: cdc-worker
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 32Mi
      imagePullSecrets:
      - name: ghcr-secret
      serviceAccountName: bookit-app
