apps/base/lock-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lock-server
  name: lock-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lock-server
  template:
    metadata:
      labels:
        app: lock-server
    spec:
      containers:
        - env:
            - name: OTEL_SERVICE_NAME
              value: bookit-lock-server
            - name: K8S_NAMESPACE
              valueFrom: { fieldRef: { fieldPath: metadata.namespace } }
            - name: POD_NAME
              valueFrom: { fieldRef: { fieldPath: metadata.name } }
            - name: OTEL_RESOURCE_ATTRIBUTES
              value: k8s.namespace.name=$(K8S_NAMESPACE),k8s.pod.name=$(POD_NAME)
            - name: LOCK_WORKER_CONCURRENCY
              value: "10"
          image: bookit-lock-server:latest
          imagePullPolicy: Always
          name: lock-server
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
      imagePullSecrets:
        - name: ghcr-secret
