apps/base/payment-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '2'
  labels:
    app: payment-processor
  name: payment-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-processor
  template:
    metadata:
      labels:
        app: payment-processor
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: backend-secrets
        - configMapRef:
            name: bookit-config
        image: bookit-payment-processor:latest
        name: payment-processor
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 32Mi
      imagePullSecrets:
      - name: ghcr-secret
      serviceAccountName: bookit-app
