apps/base/search-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: search-server
  name: search-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-server
  template:
    metadata:
      labels:
        app: search-server
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: backend-secrets
        - configMapRef:
            name: bookit-config
        image: bookit-search-server:latest
        livenessProbe:
          httpGet:
            path: /health
            port: 8084
          initialDelaySeconds: 15
          periodSeconds: 20
        name: search-server
        ports:
        - containerPort: 8084
          name: http
        - containerPort: 50051
          name: grpc
        readinessProbe:
          httpGet:
            path: /health
            port: 8084
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 32Mi
      imagePullSecrets:
      - name: ghcr-secret
      serviceAccountName: bookit-app
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: search-server
  name: search-server
spec:
  ports:
  - name: http
    port: 8084
    targetPort: 8084
  - name: grpc
    port: 50051
    targetPort: 50051
  selector:
    app: search-server
