apps/base/ws-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ws-server
  name: ws-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-server
  template:
    metadata:
      labels:
        app: ws-server
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: backend-secrets
        - configMapRef:
            name: bookit-config
        image: bookit-ws-server:latest
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 20
          tcpSocket:
            port: 8081
        name: ws-server
        ports:
        - containerPort: 8081
          name: http
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          tcpSocket:
            port: 8081
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
      imagePullSecrets:
      - name: ghcr-secret
      serviceAccountName: bookit-app
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ws-server
  name: ws-server
spec:
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  selector:
    app: ws-server
  type: ClusterIP
